[gd_scene load_steps=15 format=2]

[ext_resource path="res://src/player/gino.png" type="Texture" id=1]
[ext_resource path="res://src/player/Move.gd" type="Script" id=2]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 192, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 256, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 320, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 384, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 448, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 512, 0, 64, 64 )

[sub_resource type="SpriteFrames" id=10]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="Animation" id=11]
resource_name = "Basic Move"
length = 4.0
loop = true
step = 0.0
tracks/0/type = "value"
tracks/0/path = NodePath("Gino1:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.0108286, 2.08991, 3.98089 ),
"transitions": PoolRealArray( 0.138696, 1.51572, 5.27803 ),
"update": 0,
"values": [ Vector2( 50, 50 ), Vector2( 500, 50 ), Vector2( 50, 50 ) ]
}

[sub_resource type="Curve2D" id=12]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 840, 72, 0, 0, 0, 0, 848, 280, 0, 0, 0, 0, 856, 408, 0, 0, 0, 0, 928, 416, 0, 0, 0, 0, 960, 352, 0, 0, 0, 0, 968, 248, 0, 0, 0, 0, 984, 152, 0, 0, 0, 0, 920, 72, 0, 0, 0, 0, 872, 32, 0, 0, 0, 0, 840, 72 )
}

[node name="Node2D" type="Node2D"]
script = ExtResource( 2 )

[node name="Labels" type="Node" parent="."]

[node name="Label1" type="Label" parent="Labels"]
margin_left = 264.0
margin_top = 63.0
margin_right = 373.0
margin_bottom = 77.0
rect_pivot_offset = Vector2( 256, 64 )
text = "Animation player"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="Labels"]
margin_left = 264.0
margin_top = 156.0
margin_right = 373.0
margin_bottom = 170.0
rect_pivot_offset = Vector2( 256, 64 )
text = "Set position"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="Labels"]
margin_left = 264.0
margin_top = 252.0
margin_right = 373.0
margin_bottom = 266.0
rect_pivot_offset = Vector2( 256, 64 )
text = "Move toward"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label4" type="Label" parent="Labels"]
margin_left = 264.0
margin_top = 373.0
margin_right = 373.0
margin_bottom = 387.0
rect_pivot_offset = Vector2( 256, 64 )
text = "lerp"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label5" type="Label" parent="Labels"]
margin_left = 264.0
margin_top = 448.0
margin_right = 373.0
margin_bottom = 462.0
rect_pivot_offset = Vector2( 256, 64 )
text = "Tweens"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label6" type="Label" parent="Labels"]
margin_left = 880.0
margin_top = 192.0
margin_right = 989.0
margin_bottom = 206.0
rect_pivot_offset = Vector2( 256, 64 )
text = "Paths"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Gino1" type="AnimatedSprite" parent="."]
position = Vector2( 359.983, 50 )
frames = SubResource( 10 )
frame = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
"anims/Basic Move" = SubResource( 11 )

[node name="Gino2" type="AnimatedSprite" parent="."]
position = Vector2( 50, 150 )
frames = SubResource( 10 )
frame = 2

[node name="Gino3" type="AnimatedSprite" parent="."]
position = Vector2( 50, 250 )
frames = SubResource( 10 )
frame = 2

[node name="Gino4" type="AnimatedSprite" parent="."]
position = Vector2( 50, 350 )
frames = SubResource( 10 )
frame = 2

[node name="Gino4b" type="AnimatedSprite" parent="."]
position = Vector2( 50, 400 )
frames = SubResource( 10 )
frame = 2

[node name="Gino5" type="AnimatedSprite" parent="."]
position = Vector2( 50, 450 )
frames = SubResource( 10 )
frame = 2

[node name="Tween" type="Tween" parent="."]

[node name="Gino6" type="AnimatedSprite" parent="."]
position = Vector2( 49.9999, 550 )
frames = SubResource( 10 )
frame = 2

[node name="Path2D" type="Path2D" parent="."]
curve = SubResource( 12 )

[node name="PathFollow2D" type="PathFollow2D" parent="Path2D"]
position = Vector2( 840, 72 )
rotation = 1.53235
